--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,22 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+click>=8.1.7
+# Sphinx
+# coverage
+# awscli
+# flake8
+# python-dotenv>=0.5.1
 
 
 # backwards compatibility
-pathlib2
+# pathlib2
+
+gdown~=5.1.0
+setuptools~=68.2.2
+requests~=2.31.0
+tqdm~=4.66.1
+numpy~=1.26.3
+pydub~=0.25.1
+torch~=2.2.0+cu121
+torchaudio~=2.2.0+cu121
