--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,8 @@ numpy~=1.26.3
 pydub~=0.25.1
 torch~=2.2.0+cu121
 torchaudio~=2.2.0+cu121
+scikit-learn~=1.4.1.post1
+fire~=0.5.0
+matplotlib~=3.8.3
+torchmetrics~=1.3.1
+tensorboard~=2.16.2
