--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,11 @@ requests~=2.31.0
 tqdm~=4.66.1
 numpy~=1.26.3
 pydub~=0.25.1
-torch~=2.2.0+cu121
-torchaudio~=2.2.0+cu121
+# windows
+# torch~=2.2.0+cu121
+# torchaudio~=2.2.0+cu121
+# linux
+# pytorch-lightning~=2.2.4
 scikit-learn~=1.4.1.post1
 fire~=0.5.0
 matplotlib~=3.8.3
@@ -33,3 +36,4 @@ soundfile~=0.12.1
 scipy~=1.12.0
 joblib~=1.3.2
 wandb~=0.16.6
+audiomentations~=0.35.0
