torch requirements commented

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ pandas~=2.2.1
 librosa~=0.10.1
 wandb~=0.16.6
 audiomentations~=0.35.0
-torch~=2.2.0+cu121
-torchaudio~=2.2.0+cu121
+# torch~=2.2.0+cu121
+# torchaudio~=2.2.0+cu121
 plotly~=5.24.0
 umap~=0.1.1
