--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,7 @@
 # local package
 -e .
 
-# external requirements
 click>=8.1.7
-# Sphinx
-# coverage
-# awscli
-# flake8
-# python-dotenv>=0.5.1
-
-
-# backwards compatibility
-# pathlib2
-
 gdown~=5.1.0
 setuptools~=68.2.2
 requests~=2.31.0
@@ -33,7 +22,6 @@ pandas~=2.2.1
 librosa~=0.10.1
 wandb~=0.16.6
 audiomentations~=0.35.0
-# torch~=2.2.0+cu121
-# torchaudio~=2.2.0+cu121
 plotly~=5.24.0
 umap~=0.1.1
+umap-learn~=0.5.6
